# advent-of-code

./: .gitignore
2023/rust/: .rustfmt.toml  Cargo.toml  README.md  benchmarks.txt  justfile
2023/rust/day-01/src/: part1.rs  part2.rs
2023/rust/day-02/: README.md
2023/rust/day-02/src/: part1.rs  part2.rs
2024/python/: README.md  example.env  justfile  pyproject.toml
2024/python/.devcontainer/: Dockerfile  devcontainer.json
2024/python/.ipython/profile_default/: history.sqlite  ipython_config.py  ipython_kernel_config.py
2024/python/scripts/: create.py
