[workspace]
resolver = "2"
members = ["day-*", "www"]
default-members = ["day-*"]

[workspace.dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
dhat = "0.3.2"
divan = "0.1.4"
glam = "0.24.2"
indicatif = "0.17.7"
itertools = "0.12.0"
miette = { version = "5.10", features = ["fancy"] }
nom = "7.1.3"
nom-supreme = "0.8.0"
nom_locate = "4.2.0"
petgraph = "0.6.4"
rayon = "1.8.0"
rstest = "0.18.2"
rstest_reuse = "0.6.0"
test-log = { version = "0.2.14", default-features = false, features = [
    "trace",
] }
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-tracy = "0.10.4"
tracy-client = "0.16.4"
tracy-client-sys = "0.22.0"

[profile.flamegraph]
inherits = "release"
debug = true

[profile.dhat]
inherits = "release"
debug = 1

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
